# test-clean

./: .env.example  API_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  COMPANY_RELATIONSHIPS.md  IMPLEMENTATION.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/application/: __init__.py
app/application/dtos/: __init__.py
app/application/services/: __init__.py  event_bus.py
app/application/use_cases/: __init__.py
app/core/: __init__.py  config.py  secret_manager.py
app/domain/: __init__.py
app/domain/aggregates/: company_aggregate.py
app/domain/entities/: company_type.py
app/domain/events/: __init__.py  base_event.py  company_created.py  company_updated.py
app/domain/exceptions/: __init__.py
app/domain/repositories/: company_repository.py
app/domain/services/: __init__.py
app/domain/specifications/: __init__.py
app/infrastructure/: __init__.py
app/infrastructure/cache/: __init__.py
app/infrastructure/database/: __init__.py
app/infrastructure/messaging/: __init__.py
app/infrastructure/persistence/: __init__.py
app/presentation/: main.py
app/presentation/api/: __init__.py
docs/: AWS_SECRETS_MANAGER.md  api.md  architecture.md  domain_model.md  event_bus_usage.md
scripts/: __init__.py  init_db.py
src/app/core/: __init__.py
src/app/presentation/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/integration/api/: __init__.py
tests/integration/infrastructure/: __init__.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py
(+64 files in other folders)
